# Entra-ID-Misconfiguration-Spotter

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC.md  pyproject.toml
src/entra_spotter/: cli.py  graph.py
src/entra_spotter/checks/: __init__.py  _ca_helpers.py  _shared.py  admin_consent_workflow.py  auth_methods_number_matching.py  break_glass_exclusion.py  device_code_blocked.py  dynamic_group_hijack.py  global_admin_count.py  guest_access.py  guest_invite_policy.py  legacy_auth_blocked.py  privileged_roles_license.py  privileged_roles_mfa.py  privileged_roles_phishing_resistant_mfa.py  shadow_admins_app_owners.py  shadow_admins_group_owners.py  sp_admin_roles.py  sp_graph_roles.py  sp_multiple_secrets.py  unused_apps_cleanup.py  user_consent.py
tests/: conftest.py  test_checks.py  test_cli.py
